--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,8 +22,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore "Server/AndNetwork.Server.csproj"
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build "AndNetwork.Server.csproj" --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
