--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["Server/AndNetwork.Server.csproj", "Server/"]
 COPY ["Client/AndNetwork.Client.csproj", "Client/"]
