--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   server:
+    container_name: AndNetwork.Server
     image: ${DOCKER_REGISTRY-}andnetworkserver
     restart: unless-stopped
     env_file: .env
